fix: sidebar-overflow-fix

--- a/src/styles/dashboard/sidebar/sidebar.scss
+++ b/src/styles/dashboard/sidebar/sidebar.scss
@@ -17,6 +17,7 @@
     top: 4.7rem;
     transition: 0.3s ease-in-out;
     width: 5rem;
+    overflow-x: hidden;
   }
 
   &::-webkit-scrollbar {
